--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1083,6 +1083,7 @@ jobs:
             ${{ env.INSTALL_TEST_DIR }}/logs/hanged/*.log
             ${{ env.INSTALL_TEST_DIR }}/logs/interapted/*.log
             ${{ env.INSTALL_TEST_DIR }}/logs/disabled_tests.log
+            ${{ env.INSTALL_TEST_DIR }}/logs/hash_table.csv
           if-no-files-found: 'error'
 
   TensorFlow_Hub_Models_Tests:
