Restrict version of pytorch-quantization

--- a/tests/model_hub_tests/torch_tests/requirements.txt
+++ b/tests/model_hub_tests/torch_tests/requirements.txt
@@ -11,7 +11,7 @@ sacremoses
 sentencepiece
 datasets
 pyctcdecode
-pytorch-quantization --extra-index-url https://pypi.ngc.nvidia.com
+pytorch-quantization<=2.1.3 --extra-index-url https://pypi.ngc.nvidia.com
 protobuf
 soundfile
 pandas
