Explicitly specify 'deny-licenses' for python packages

--- a/.github/dependency_review.yml
+++ b/.github/dependency_review.yml
@@ -5,6 +5,41 @@ allow-licenses:
   - 'BSD-2-Clause AND BSD-3-Clause'
   - 'MIT'
   - 'Apache-2.0'
+deny-licenses:
+  - 'CNRI-Python-GPL-Compatible'
+  - 'GPL-1.0-only'
+  - 'GPL-1.0-or-later'
+  - 'GPL-2.0-only'
+  - 'GPL-2.0-or-later'
+  - 'GPL-3.0-only'
+  - 'GPL-3.0-or-later'
+  - 'LGPL-2.0-only'
+  - 'LGPL-2.0-or-later'
+  - 'LGPL-2.1-only'
+  - 'LGPL-2.1-or-later'
+  - 'LGPL-3.0-only'
+  - 'LGPL-3.0-or-later'
+  - 'LGPLLR'
+  - 'NGPL'
+  - 'GPL-1.0'
+  - 'GPL-1.0+'
+  - 'GPL-2.0'
+  - 'GPL-2.0+'
+  - 'GPL-2.0-with-autoconf-exception'
+  - 'GPL-2.0-with-bison-exception'
+  - 'GPL-2.0-with-classpath-exception'
+  - 'GPL-2.0-with-font-exception'
+  - 'GPL-2.0-with-GCC-exception'
+  - 'GPL-3.0'
+  - 'GPL-3.0+'
+  - 'GPL-3.0-with-autoconf-exception'
+  - 'GPL-3.0-with-GCC-exception'
+  - 'LGPL-2.0'
+  - 'LGPL-2.0+'
+  - 'LGPL-2.1'
+  - 'LGPL-2.1+'
+  - 'LGPL-3.0'
+  - 'LGPL-3.0+'
 fail-on-scopes:
   - 'runtime'
   - 'development'
