--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1256,7 +1256,7 @@ jobs:
       - name: Docs Python snippets
         run: python3 ${OPENVINO_REPO}/openvino/docs/snippets/main.py
         env:
-          PYTHONPATH: ${{ env.OPENVINO_REPO }}/openvino/docs
+          PYTHONPATH: ${{ env.OPENVINO_REPO }}/openvino/docs:$PYTHONPATH
           LD_LIBRARY_PATH: ${{ env.INSTALL_TEST_DIR }}:$LD_LIBRARY_PATH
 
       - name: Upload Test Results
@@ -1344,7 +1344,7 @@ jobs:
       - name: PyTorch Models Tests
         run: |
           export PYTHONPATH=${MODEL_HUB_TESTS_INSTALL_DIR}:$PYTHONPATH
-          python3 -m pytest -n auto ${MODEL_HUB_TESTS_INSTALL_DIR}/torch_tests/ -m ${TYPE} --html=${INSTALL_TEST_DIR}/TEST-torch_model_tests.html --self-contained-html -v
+          python3 -m pytest -n logical ${MODEL_HUB_TESTS_INSTALL_DIR}/torch_tests/ -m ${TYPE} --html=${INSTALL_TEST_DIR}/TEST-torch_model_tests.html --self-contained-html -v
         env:
           TYPE: ${{ github.event_name == 'schedule' && 'nightly' || 'precommit'}}
           TEST_DEVICE: CPU
