--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1259,7 +1259,7 @@ jobs:
           export PYTHONPATH=${OPENVINO_REPO}/docs/:$PYTHONPATH
           # for 'template' extension
           export LD_LIBRARY_PATH=${INSTALL_TEST_DIR}:$LD_LIBRARY_PATH
-          python3 ${OPENVINO_REPO}/openvino/docs/snippets/main.py
+          python3 ${OPENVINO_REPO}/docs/snippets/main.py
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v3
