add missing python installation

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -429,6 +429,10 @@ jobs:
           apt-get update
           apt-get install --assume-yes --no-install-recommends git ca-certificates
 
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
       #
       # Initialize OpenVINO
       #
