--- a/.github/ISSUE_TEMPLATE/good_first_issue.yml
+++ b/.github/ISSUE_TEMPLATE/good_first_issue.yml
@@ -57,3 +57,12 @@ body:
       placeholder: GitHub users
     validations:
       required: true
+
+  - type: textarea
+    id: ticket
+    attributes:
+      label: Ticket
+      description: |
+          Provide the JIRA ticket, if available.
+    validations:
+      required: false
