use 16-core for onnxruntime job

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -399,7 +399,7 @@ jobs:
     defaults:
       run:
         shell: bash
-    runs-on: aks-linux-4-cores-16gb
+    runs-on: aks-linux-16-cores
     container:
       image: openvinogithubactions.azurecr.io/dockerhub/ubuntu:20.04
       volumes:
